# splatlib

./: .gitignore  CMakeLists.txt  itwom3.0.cpp  itwom3.0.h  itwom30_h_b64.txt  itwom_b64.txt  splatlib.sln  start_demo.bat  stop_demo.bat
SplatLib.NET/: InterferenceAnalysis.cs  PropagationAnalysis.cs  SplatContext.cs  SplatException.cs  SplatLib.NET.csproj
SplatLib.NET.Tests/: FlatTerrainProviderTests.cs  GeoMathTests.cs  SplatLib.NET.Tests.csproj
SplatLib.NET/Models/: CoverageGrid.cs  GridPoint.cs  InterferenceResult.cs  PathResult.cs  PropagationModel.cs  Site.cs
SplatLib.NET/Native/: NativeMethods.cs
SplatLib.NET/Terrain/: CesiumTerrainProvider.cs  FlatTerrainProvider.cs  GeoMath.cs  GeoPoint.cs  ICesiumBridge.cs  ITerrainProvider.cs  SrtmTerrainProvider.cs  TerrainProfile.cs
demo/: main.py  requirements.txt  splatlib_native.py  terrain_srtm.py
demo/static/: index.html
native/: CMakeLists.txt
native/include/: splatlib.h
native/src/: splatlib.cpp
native/src/propagation/: itm.cpp  itm.hpp  itwom3.0.cpp  itwom3.0.h  itwom3.cpp  itwom3.hpp
